<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2015 yvolk (Yuri Volkov), http://yurivolkov.com
	Copyright (C) 2008 Torgny Bjers
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/help_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ViewFlipper
            android:id="@+id/help_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoStart="false" >

            <LinearLayout
                android:id="@+id/splash_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/splash_logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/splash_logo" />

                <TextView
                    android:id="@+id/splash_payoff_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/splash_payoff_line" />

                <TextView
                    android:id="@+id/splash_application_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="(application version)" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/help_page1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <WebView
                    android:id="@+id/user_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip" />
            </ScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <WebView
                    android:id="@+id/changelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip" />
            </ScrollView>
        </ViewFlipper>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="3dp" >

        <Button
            android:id="@+id/button_help_learn_more"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/splash_button_learn_more" >
        </Button>

        <Button
            android:id="@+id/button_restore"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_restore" />
        
        <Button
            android:id="@+id/button_help_get_started"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/splash_button_get_started" >
        </Button>

    </LinearLayout>

</LinearLayout>