<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright (c) 2014 yvolk (Yuri Volkov), http://yurivolkov.com

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<group android:id="@+id/MAIN_MENU">
		<item android:id="@+id/preferences_menu_id"
			  android:alphabeticShortcut="p"
			  android:icon="?attr/settingsIcon"
			  app:showAsAction="ifRoom"
			  android:title="@string/settings_action">
		</item>
	</group>
</menu>
